調整文字與同行的其他文字水平對齊

--- a/app/assignment.html
+++ b/app/assignment.html
@@ -9,7 +9,7 @@ current: assignment
   <nav class="d-flex mt-5 mb-6">
     <h4 class="h4 mb-0 font-weight-bold mr-6">Assignment</h4>
     <ul class="courses list-unstyled mb-0">
-      <li><a href="#"><span class="font-weight-bold mr-2">All Courses</span><i
+      <li><a href="#"><span class="font-weight-bold mr-2 align-middle">All Courses</span><i
             class="material-icons text-secondary align-bottom">keyboard_arrow_down</i></a></li>
     </ul>
     <a href="#" class="ml-auto"><i class="material-icons">search</i></a>
